overflow fixes

--- a/pokedex_try.css
+++ b/pokedex_try.css
@@ -56,11 +56,13 @@ body {
 .poke_page img{
     margin-top: 100px;
     width: 100%;
+    overflow-y: hidden;
 }
 
 .poke_page h1{
   margin-top: 150px;
   font-size: clamp(3rem, 1.84rem + 6.15vw, 8rem);
+  overflow-y: hidden;
 }
 
 .custbut1{
@@ -109,6 +111,7 @@ body {
   background: -webkit-linear-gradient(-91deg, rgb(243, 10, 10) 5%, rgb(161, 76, 76) 53%, rgb(104, 7, 7) 91%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  overflow-y: hidden;
 }
 
 .poke_page p{
@@ -145,6 +148,7 @@ body {
 
 .features_page .div_features .div_feature h3{
   font-size: 25px;
+  overflow-y: hidden;
 
 }
 
@@ -248,6 +252,7 @@ body {
 	margin: 15px 0 7px;
 	letter-spacing: 0px;
   font-size: 20px;
+  padding: 4px;
 }
 
 .pokemon .stats p{
@@ -350,6 +355,7 @@ img.vert-move {
 .pokcov h1{
   font-size: clamp(2.8rem, -0.875rem + 8.333vw, 4.5rem);
   padding-left: 20px;
+  overflow-y: hidden;
 }
 
 .pokdes{
